--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -60,6 +60,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.charlesbai321.myapplication.Activities.MainActivity" />
         </activity>
+        <!--Originally was going to use a reciever in conjunction with a GPS service to
+        make calls to getLocation(), but decided to use alarm manager instead, so this isn't needed-->
+        <!-- <receiver android:name=".UAlarmRecieverever" android:enabled="true" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="restartService"/>
+            </intent-filter>
+        </receiver> -->
+        <service android:name=".Util.GPSService" android:stopWithTask="false"/>
     </application>
 
 </manifest>
