should be working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
             </intent-filter>
         </receiver> -->
         <service android:name=".Util.GPSService" android:stopWithTask="false"/>
+        <service android:name=".Util.ParseLocationService"/>
+        <service android:name=".Util.StartGPSService"/>
     </application>
 
 </manifest>
