Changed which class the service calls, started working again

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:stopWithTask="false" />
         <service android:name=".Util.ParseLocationService" />
         <service android:name=".Util.StartGPSService" />
-
+        <receiver android:name=".Util.AlarmReceiver" />
         <activity
             android:name=".Activities.SinglePlaceActivity"
             android:screenOrientation="portrait"
